# demo

./: .gitignore  .tool-versions  .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt_v1.10.15_bigquery_build_full_refresh.yml  dbt_v1.10.15_duckdb_build_full_refresh.yml  dbt_v1.10.15_fabric_build_full_refresh.yml  dbt_v1.10.15_redshift_build_full_fresh.yml  dbt_v1.10.15_snowflake_build_full_refresh.yml  tuva_dbt_v1.8.6.yml  tuva_dbt_v1.9.4.yml  weekly_dbt_v1.9.4_snowflake_dev_build_full_refresh.yml
integration_tests/profiles/bigquery/: profiles.yml
integration_tests/profiles/databricks/: profiles.yml
integration_tests/profiles/duckdb/: profiles.yml
integration_tests/profiles/fabric/: profiles.yml
integration_tests/profiles/redshift/: profiles.yml
integration_tests/profiles/snowflake/: profiles.yml
integration_tests/profiles/snowflake_dev/: profiles.yml
macros/: redshift_seed_batch_size.sql  redshift_seed_load_csv_rows.sql
models/: condition.yml  encounter.yml  location.yml  medication.yml  patient.sql  patient.yml  practitioner.yml  procedure.yml
seeds/: _seeds.yml  eligibility.csv  eligibility.yml  immunization.csv  lab_result.yml  medical_claim.yml  observation.yml  pharmacy_claim.csv  pharmacy_claim.yml  provider_attribution.csv  provider_attribution.yml
